# product

./: Cargo.toml
migrations/: 20250820211616_producttwo.sql
src/: dto.rs  main.rs  models.rs
src/handlers/: mod.rs  product.rs
