[package]
name = "product"
version = "0.1.0"
edition = "2024"

[dependencies]

actix-web = "4"
# sqlx = { version = "0.8.6", features = ["runtime-actix-rustls", "postgres", "uuid", "chrono"] }
# sqlx = { version = "0.8.6", features = ["runtime-actix-native-tls", "postgres", "uuid", "chrono"] }
sqlx = { version = "0.6.0", features = ["runtime-actix-rustls", "postgres", "uuid", "chrono"] }


uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
